# MagicXML

./: README.md  README_CN.md  README_GE.md  README_JP.md  README_RU.md  categories.csv  main.py  path_utils.py  pyproject.toml  replit.nix  requirements.txt
data_files/: test.csv.xlsx
docs/readme/: README_GE.md  README_JP.md  README_KR.md
static/css/: styles.css
static/js/: main.js
templates/: index.html
tests/: test_clean_description.py  test_path_utils.py
