[tool.poetry]
name = "magicxml"
version = "0.1.0"
description = "MagicXML application"
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.78.0"
uvicorn = {version = "0.22.0", extras = ["standard"]}
spacy = "3.2.1"
ru-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.2.0/ru_core_news_sm-3.2.0.tar.gz"}
requests = "2.32.3"
aiohttp = "3.9.5"
brotli = "1.1.0"
beautifulsoup4 = "4.12.3"
html5lib = "1.1"
lxml = "5.2.1"
pandas = "2.2.2"
pillow = "10.3.0"
pypdf = "4.1.0"
pdfplumber = "0.11.0"
reportlab = "4.0.9"
tabula-py = "2.9.0"
jinja2 = "3.1.3"
python-multipart = "0.0.9"
pydantic = "1.10.13"
numpy = "1.26.4"
scikit-learn = "1.4.2"
matplotlib = "3.8.4"
seaborn = "0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
